fixed bar spacing

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -200,15 +200,15 @@ header {
   }
 
   @include for-size(tablet-landscape) {
-    h3 {
-      width: auto;
-      vertical-align: top;
-      display: inline-block;
-      text-align: right;
-      margin-bottom: 10px;
-      margin-right: 1em;
-      margin-top: 1em;
-    }
+    // h3 {
+    //   width: auto;
+    //   vertical-align: top;
+    //   display: inline-block;
+    //   text-align: right;
+    //   margin-bottom: 10px;
+    //   margin-right: 1em;
+    //   margin-top: 1em;
+    // }
 
     ol {
       width: auto;
